--- a/templates/model/config/config.go.tmpl
+++ b/templates/model/config/config.go.tmpl
@@ -1,13 +1,25 @@
 package config
 
 type Server struct {
-    HTTP HTTP `mapstructure:"http"`
-	Log  Log  `mapstructure:"log"`
+    HTTP  HTTP  `mapstructure:"http"`
+	Log   Log   `mapstructure:"log"`
+	Mysql Mysql `mapstructure:"mysql"`
 }
 
 type HTTP struct {
     IP   string `mapstructure:"ip"`
     Port int    `mapstructure:"port"`
+}
+
+type Mysql struct {
+	IP           string `mapstructure:"ip"`
+	Port         int    `mapstructure:"port"`
+	DBName       string `mapstructure:"dbname"`
+	User         string `mapstructure:"user"`
+	Pass         string `mapstructure:"pass"`
+	MaxIdleConns int    `mapstructure:"max_idle_conns"`
+	MaxOpenConns int    `mapstructure:"max_open_conns"`
+	Debug        bool   `mapstructure:"debug"`  
 }
 
 // Log ...
